[package]
name = "anchor_spl_token_demo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_spl_token_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "=0.29.0"
metaplex-token-metadata = "0.0.1"
solana-program = "1.18.23"
borsh = "0.9"
